@@ -371,6 +371,9 @@ Bug Fixes
 
 * SOLR-3878: Exception when using open-ended range query with CurrencyField (janhoy)
 
+* SOLR-3891: CacheValue in CachingDirectoryFactory cannot be used outside of 
+  solr.core package. (phunt via Mark Miller)
+
 Other Changes
 ----------------------
 
